<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tittle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/emicalculator_text"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mortgage_textView"
        android:layout_width="185dp"
        android:layout_height="27dp"
        android:labelFor="@+id/mortgageEntry"
        android:text="@string/mortgageamount_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tittle_textView"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/dollar_textView"
        android:layout_width="17dp"
        android:layout_height="27dp"
        android:text="@string/dollar_text"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/interest_textView"
        app:layout_constraintEnd_toStartOf="@+id/mortgageEntry"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_textView"
        app:layout_constraintVertical_bias="0.276" />

    <EditText
        android:id="@+id/mortgageEntry"
        android:layout_width="171dp"
        android:layout_height="46dp"
        android:layout_marginTop="4dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgage_textView" />

    <TextView
        android:id="@+id/interest_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:labelFor="@+id/interestEntry"
        android:text="@string/annualinterest_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mortgageEntry" />

    <EditText
        android:id="@+id/interestEntry"
        android:layout_width="119dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interest_textView" />

    <TextView
        android:id="@+id/percentage_textView"
        android:layout_width="14dp"
        android:layout_height="23dp"
        android:layout_marginBottom="28dp"
        android:text="@string/percentage_text"
        app:layout_constraintBottom_toTopOf="@+id/amortization_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/interestEntry"
        app:layout_constraintTop_toBottomOf="@+id/interest_textView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/amortization_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/amortizationEntry"
        android:text="@string/amortizationperiod_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/interestEntry"
        app:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/amortizationEntry"
        android:layout_width="114dp"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amortization_textView"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/years_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/years_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/amortizationEntry"
        app:layout_constraintTop_toBottomOf="@+id/amortization_textView"
        app:layout_constraintVertical_bias="0.075" />

    <Button
        android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_button"
        app:layout_constraintBottom_toTopOf="@+id/montlypayment_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amortizationEntry"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/montlypayment_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="176dp"
        android:text="@string/monthlypayment_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/emiamount_textView"
        android:layout_width="147dp"
        android:layout_height="38dp"
        android:text="@string/emiamount_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/montlypayment_textView"
        app:layout_constraintVertical_bias="0.061" />

    <TextView
        android:id="@+id/totalinterest_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/totalinterest_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emiamount_textView"
        app:layout_constraintVertical_bias="0.169" />

    <TextView
        android:id="@+id/paidinterest_textView"
        android:layout_width="163dp"
        android:layout_height="42dp"
        android:layout_marginBottom="4dp"
        android:text="@string/paidinterest_text"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalinterest_textView"
        app:layout_constraintVertical_bias="0.163" />




</androidx.constraintlayout.widget.ConstraintLayout>